# hermes-plugin-async-threads

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
async_threads/: __init__.py  adapter.py  commands.py  continuation.py  emitter.py  finalizers.py  handoffs.py  ingress_digest.py  kanban.py  lifecycle.py  listeners.py  origin.py  plugin.py  privacy.py  profile_lane.py  registry.py  rendering.py  routing.py  secrets.py  security.py  source_filters.py  source_runner.py  tools.py  workflows.py
docs/: AGENT_TOOL_SCENARIOS.md  BRIDGE_RECIPES.md  EVENT_CONTRACT.md  LOOP_DOGFOOD.md  LOOP_EVENTS.md  LOOP_EVIDENCE.md  LOOP_SCENARIO_HARNESS.md  LOOP_SIGNAL_INGESTION.md  MVP_USAGE.md  PROBLEM_STATEMENT.md  QUICKSTART.md  SECURITY.md
docs/assets/: analysis.md  outline.md
docs/design/: STABLE_CONTINUATION_API.md
docs/schemas/: async-thread-event-v1.schema.json
docs/spikes/: hermes-async-thread-feasibility.md
examples/kanban-source-binding/: README.md
hermes_plugin_async_threads/: __init__.py
scripts/: ath-profile-lane.py
tests/: conftest.py  test_adapter.py  test_agent_tool_scenarios.py  test_commands.py  test_docs_agent_first.py  test_emitter.py  test_finalizers.py  test_kanban_adapter.py  test_lifecycle.py  test_listeners.py  test_loop_event_contract.py  test_loop_scenarios.py  test_loop_signal_ingestion_docs.py  test_origin.py  test_plugin_load.py  test_profile_lane.py  test_registry.py  test_routing.py  test_security.py  test_source_runner.py  test_tools.py
(+7 files in other folders)
